Fix HTML validation

--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>
       How to radio ~~ C3 Radio Operation Center
@@ -168,7 +169,4 @@
       </p>
     </div>
   </body>
-  <script>
-  
-  </script>
 </html>
